--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "sweetalert2": "^11.12.3",
+    "sweetalert2-react-content": "^5.0.7",
     "ziggy-js": "^1.8.2"
   },
   "prettier": {
